# exchange-engine

./: .gitignore  DEPLOYMENT.md  README.md  SPECIFICATION.md  build.gradle.kts  run-local-rust.sh  run-local.sh  settings.gradle.kts
jvm/: build.gradle.kts
jvm/src/main/kotlin/com/exchange/: GatewayServer.kt  OmeServer.kt  OmeSimulator.kt  OrderEvent.kt  PersistenceWorker.kt
rust/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: ipc.rs  lib.rs
rust/gateway/: Cargo.toml
rust/gateway/src/: main.rs
rust/me/: Cargo.toml
rust/me/src/: benchmark.rs  main.rs  order_book.rs
rust/ome/: Cargo.toml
rust/ome/src/: main.rs  risk_engine.rs
rust/persistence/: Cargo.toml
rust/persistence/src/: main.rs
scripts/: order_payload.lua  simulate-market.py  test-all.sh  test-cancel.sh  test-ioc.sh  test-market-order.sh  test-orderbook.sh  test-scenario.sh  test-stop-order.sh  verify-integrity.sh
shared/: exchange-schema.xml
src/main/kotlin/com/exchange/: GatewayServer.kt  MatchingServer.kt  OrderEvent.kt  PersistenceWorker.kt
src/main/kotlin/com/exchange/core/: OrderBook.kt
src/main/kotlin/com/exchange/ipc/: AeronAdapter.kt
src/main/kotlin/com/exchange/journal/: EventJournal.kt
src/main/kotlin/com/exchange/model/: Order.kt
src/main/kotlin/com/exchange/ome/: OmeEngine.kt  RiskEngine.kt
src/main/resources/: db-schema.sql  exchange-schema.xml
src/test/kotlin/com/exchange/core/: OrderBookTest.kt
src/test/kotlin/com/exchange/journal/: EventJournalTest.kt
src/test/kotlin/com/exchange/ome/: RiskEngineTest.kt
(+8 files in other folders)
