[package]
name = "me"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "me"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
